[package]
name = "unimotion-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.*"
macaddr = "1.*"
serialport = "4.*"
crossbeam-channel = "0.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] , optional = true }